src/styles/animations.scss
$duration :1s;

@keyframes slide-from-left {
    0% {
        transform: translateX(-100px);
        opacity: 0;
    }   
    100%{

    }
}

@keyframes slide-from-right {
    0% {
        transform: translateX(100px);
        opacity: 0;
    }
    100%{

    }
}


@keyframes slide-from-bottom {
    0% {
        transform: translateY(100px);
        opacity: 0;
    }
    100%{

    }
}

@keyframes  bouncing {
    0%{
        transform: translateY(0);
    }
    33%{
        transform: translateY(-2rem);
    }
    66%{
        transform: translateY(1rem);
    }
    100%{
        transform: translateY(0);
    }
}

.bounce{
    position: absolute;
    animation: bouncing 3s infinite;
}

.slide-from-left{
    animation: slide-from-left $duration forwards;
}

.slide-from-bottom{
    animation: slide-from-bottom $duration normal;
}

.slide-from-right{
    animation: slide-from-right $duration ease-in;
}

.animation-duration-1{
    animation-duration: 1s;
}
.animation-duration-2{
    animation-duration: 2s;
}

